HVAC Backup 2/objects/Account__mdt(1).object
<CustomObject>
    <fields>
        <fullName>Area_City__c</fullName>
        <label>Area / City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Classification__c</fullName>
        <label>SLA Classification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SLA</label>
    <pluralLabel>SLAs</pluralLabel>
</CustomObject>